@@ -2,6 +2,8 @@ Fri  Sep 17  2004	H. Wade Minter (minter@lunenburg.org)
      * Get the move_tank function working with the HList.  Thanks to 
        Kyle at sickduck.org for the help.
      * Move the CWX-specific functions to their own branch.
+     * Use a white background for the "Invalid" songs, too.
+     * Apply the red color style to invalid songs in the holding tank, too.
 
 Mon  Sep 13  2004	H. Wade Minter (minter@lunenburg.org)
      * Make nice white backgrounds by default for listboxes and entry 
